--- a/Craveon/customer/template/myorders.html
+++ b/Craveon/customer/template/myorders.html
@@ -132,6 +132,7 @@
                     const statusClasses = {
                         'Pending': 'text-yellow-900',
                         'Completed': 'text-green-900', 
+                        'Processing': 'text-yellow-700',
                         'Cancelled': 'text-red-500',
                         'Approved': 'text-blue-900'
                     };
